support chromatic color, result sets, borrowed roots, and song sheet expanded view enhancements
